# ray-tracing-one-wknd-sdl

./: .gitignore  CMakeLists.txt  README.md  setup.py3
notes/: rtc_cpp.md
src/: AssertUtils.cpp  AssertUtils.h  CMakeLists.txt  CPUImage.h  Camera.cpp  Camera.h  ColorUtils.cpp  ColorUtils.h  CoreUtils.cpp  CoreUtils.h  Hittable.h  HittableList.cpp  HittableList.h  Material.cpp  Material.h  Ray.h  Sphere.cpp  Sphere.h  TaskProcessor.cpp  TaskProcessor.h  TraceEngine.cpp  TraceEngine.h  TypedBitmask.h  Vec3.cpp  Vec3.h  main.cpp
